# runtimo

./: .gitignore  .moeinclude  AGENTS.md  ARCHITECTURE_DESIGN.md  AUDIT_WORKPAPER.md  BUG_C_BLAST_RADIUS.md  BUG_REPORT_gate_audit.md  BUG_REPORT_hive_mind.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  FIXED_PROMPTS.md  FIX_PROMPTS_gate_audit.md  FRUSTRATIONS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PRE_PUBLISH_AUDIT.md  PRE_PUBLISH_AUDIT_20260520.md  PROMPT_FIXES_IMPLEMENTED.md  PUBLISH.md  README.md  RELEASE.md  SECURITY.md  TODO.md  WD40_REPORT.md  client-test-report.yaml  clippy.toml  deny.toml  dist-workspace.toml  session-ses_1370.md
.github/workflows/: ci.yml  publish-cratesio.yml  release.yml
.sniper/: 7822b2bdcbc869da.STRESS_PROTOCOL.md.1780094887016329171  7822b2bdcbc869da.STRESS_PROTOCOL.md.1780094899977921449
cli/: Cargo.toml
cli/src/: daemon_bin.rs  format.rs  main.rs
core/: Cargo.toml
core/examples/: basic_read.rs  sift_test.rs  telemetry_demo.rs  write_and_undo.rs
core/src/: backup.rs  capability.rs  cmd.rs  config.rs  executor.rs  format.rs  job.rs  lib.rs  llmosafe.rs  monitor.rs  processes.rs  schema.rs  session.rs  telemetry.rs  wal.rs
core/src/capabilities/: file_read.rs  file_write.rs  git_exec.rs  kill.rs  mod.rs  shell_exec.rs  undo.rs
core/src/validation/: mod.rs  path.rs
core/tests/: integration.rs  robust.proptest-regressions  robust.rs
daemon/: Cargo.toml
daemon/src/: auth.rs  config.rs  dispatch.rs  engine.rs  jobs.rs  lib.rs  main.rs  rpc.rs
docs/: API.md  ARCHITECTURE.md  AUDIT.md  AUDIT_v0.3.0.md  DESIGN.md  FIX_G-EDGE-1_PROMPT.md  GETTING_STARTED.md  RUNTIMO_CORE_LIB.rs  RUNTIMO_CORE_LIB.rs.txt  STRESS_PROTOCOL.md  TELEMETRY.md
docs/archive/: AUDIT_REPORT.md  CONTINUATION_GUIDE.md  DESIGN_DECISION.md  PERSISTENT_MACHINE_DESIGN.md  PROMPT.md  PROMPT_COMPRESSION_SUMMARY.md  PROMPT_GUIDE.md  QUICK_PROMPT.txt  REMEDIATION_REPORT.md  SYSTEM_PROMPT.md  TELEMETRY_DESIGN.md  TELEMETRY_SUMMARY.md
docs/runbooks/: 01-implement-file-read.md
