[workspace]
resolver = "2"
members = [
    "core",
    "daemon",
    "cli",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["Moe Shawky"]
repository = "https://github.com/moeshawky/runtimo"
description = "Agent-centric capability runtime with telemetry, process tracking, and crash recovery"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
