[package]
name = "runtimo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the Runtimo capability runtime — run, list, status, logs, undo, telemetry, processes"

[lints]
workspace = true

[[bin]]
name = "runtimo"
path = "src/main.rs"

[dependencies]
runtimo-core = { path = "../core", version = "0.6" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
