[package]
name = "runtimo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for the Runtimo capability runtime — run, list, status, logs, undo, telemetry, processes"

[lints]
workspace = true

[[bin]]
name = "runtimo"
path = "src/main.rs"

[[bin]]
name = "runtimo-daemon"
path = "src/daemon_bin.rs"
doc = false

[dependencies]
runtimo-core = { path = "../core", version = "0.7" }
runtimo-daemon = { path = "../daemon", version = "0.7" }
serde_json.workspace = true
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
