[package]
name = "runtimo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent-centric capability runtime with telemetry, process tracking, and crash recovery"
keywords = ["agent", "runtime", "telemetry", "capability", "recovery"]
categories = ["os", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
llmosafe = { version = "0.7.3", default-features = false, features = ["std", "dal"] }
libc = "0.2"
toml = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
anyhow = "1.0"
proptest = "1.4"

[[example]]
name = "basic_read"
path = "examples/basic_read.rs"

[[example]]
name = "telemetry_demo"
path = "examples/telemetry_demo.rs"

[[example]]
name = "write_and_undo"
path = "examples/write_and_undo.rs"
