[package]
name = "runtimo-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Daemon for the Runtimo capability runtime (JSON-RPC server, placeholder)"

[[bin]]
name = "runtimo-daemon"
path = "src/main.rs"

[dependencies]
runtimo-core = { path = "../core", version = "0.1" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
