[package]
name = "runtimo-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Daemon for the Runtimo capability runtime (JSON-RPC server, placeholder)"

[lints]
workspace = true

[lib]
name = "runtimo_daemon"
path = "src/lib.rs"

[dependencies]
runtimo-core = { path = "../core", version = "0.7" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
libc = "0.2"
